# GeoAI

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  dist_train.sh  entrypoint.sh  pyproject.toml
.github/workflows/: docker-image.yml
configs/cloud_masks/: deeplab.py
configs/deeplab/: deeplab.py
configs/human_settlements/: deeplab.py
notebooks/building_footprints/: N1-Parse-google-bf.ipynb
notebooks/cloud_masks/: N1-test-dataset.ipynb  N2-Split-dataset.ipynb  N3-Evaluate.ipynb
notebooks/deeplab/: test.ipynb
notebooks/google_building_footprints/: N1-Download-data.ipynb  N2-Parse-google-bf.ipynb  README.md
notebooks/human_settlements/: Convert-bf-to-cluster.py  N1-1-Test-dataset.ipynb  N1-Convert-bf-to-cluster.ipynb  N1-Filter-google-bf.ipynb  N2-Test-dataset.ipynb  N3-Get-Norm-stats.ipynb  N4-Inference.ipynb
notebooks/sentinel2/: N1-Test-index.ipynb
src/geoai/: config.py  utils.py
src/geoai/data/: admin.py  base.py  human_settlements.py  image.py  sentinel.py
src/geoai/data/building_footprint/: insert_data_to_postgis.py
src/geoai/data/cloud_masks/: __init__.py
src/geoai/data/human_settlements/: __init__.py  utils.py
src/geoai/data/utils/: __init__.py  image.py  indexer.py
src/geoai/db/: postgres.py
src/geoai/hooks/: visualization_hook.py
