[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "GeoAI"
version = "0.0.1"
authors = [
  { name="Sandeep Kumar", email="sandeepgadhwal1@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sandeepgadhwal/GeoAI"
"Bug Tracker" = "https://github.com/sandeepgadhwal/GeoAI/issues"